--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Omnifood is a premium food delivery service with the mission to bring affordable and healthy meals to as many people as possible.">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -411,7 +412,7 @@
     </div>
     <div class="row">
         <p class="copy">
-            Copyright &copy; 2015 by Omnifood. All rights reserved.
+            Copyright &copy; 2015 by Omnifood. All rights reserved. Omnifood concept and design by Jonas Schmedtmann. Coded by Joaquin Nunez.
         </p>
     </div>
 </footer>
